# libopkele

./: .gitignore  AUTHORS  COPYING  Doxyfile.in  Makefile.am  NEWS.xml  acinclude.m4  autogen.bash  autogen.sh  autoregen.bash  autoregen.sh  configure.ac  libopkele.pc.in  libopkele.spec
include/: Makefile.am
include/opkele/: .gitignore  acconfig.h.in  association.h  ax.h  basic_op.h  basic_rp.h  consumer.h  curl.h  data.h  debug.h  discovery.h  exception.h  expat.h  extension.h  extension_chain.h  iterator.h  oauth_ext.h  openid_service_resolver.h  opkele-config.h  prequeue_rp.h  server.h  sreg.h  tidy.h  tr1-mem.h.in  types.h  uris.h  util-internal.h  util.h  verify_op.h  xconsumer.h  xserver.h
lib/: .gitignore  Makefile.am  ax.cc  basic_op.cc  basic_rp.cc  consumer.cc  curl.cc  data.cc  discovery.cc  exception.cc  expat.cc  extension.cc  extension_chain.cc  fields.cc  message.cc  oauth_ext.cc  openid_message.cc  openid_service_resolver.cc  params.cc  prequeue_rp.cc  secret.cc  server.cc  sreg.cc  util.cc  verify_op.cc
test/: .gitignore  Makefile.am  OP-db.sql  OP.cc  RP-db.sql  RP.cc  idiscover.cc  kingate_openid_message.h  openid_resolve.cc  sqlite.h  test.cc
test/html/: 2rels.html  head-in-body.html  hkn-delegate.html  hkn-server.html  hkn.html  in-body.html  spaced-link-attrs.html  spaced-links.html  unclosed-head.html
