nobase_include_HEADERS = \
	opkele/acconfig.h \
	opkele/opkele-config.h \
	opkele/types.h \
	opkele/association.h \
	opkele/exception.h \
	opkele/server.h \
	opkele/consumer.h \
	opkele/extension.h \
	opkele/sreg.h \
	opkele/extension_chain.h \
	opkele/xconsumer.h \
	opkele/xserver.h \
	opkele/curl.h opkele/expat.h \
	opkele/openid_service_resolver.h \
	opkele/uris.h
EXTRA_DIST = \
	opkele/data.h \
	opkele/util.h
